--- a/ES-LETI-1Sem-Grupo-10/pom.xml
+++ b/ES-LETI-1Sem-Grupo-10/pom.xml
@@ -7,13 +7,15 @@
   
   <dependencyManagement>
   	<dependencies>
-  		<dependency>
-    		<groupId>org.json</groupId>
-    		<artifactId>json</artifactId>
-    		<version>20210307</version>
-		</dependency>
+  		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+	<dependency>
+    	<groupId>com.google.code.gson</groupId>
+    	<artifactId>gson</artifactId>
+    	<version>2.9.0</version>
+	</dependency>
+
   	
-  		
+  			
   	
   	</dependencies>
   </dependencyManagement>
